<resources>
    <string name="app_name" translatable="false">Todolist</string>


    <!--  Version  -->

    <string name="can_not_find_version_name">找不到版本号</string>
    <string name="version">版本</string>


    <!-- activity_avatar -->
    <string name="sure">确认</string>

    <!-- 侧滑栏-->
    <string name="note">便签</string>
    <string name="todo" translatable="false">todo</string>
    <string name="calendar">日历</string>
    <string name="finished">已完成</string>
    <string name="all">所有</string>

    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="recycle_bin">回收站</string>
    <string name="privacy">私密</string>

    <string name="other">其他</string>
    <string name="more_service">更多服务</string>
    <string name="weather">天气</string>

    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="today_plan">今日计划</string>

    <!-- MainActivity -->
    <string name="head_view_hint">干嘛戳人家屁股,哼</string>
    <string name="leave_app">哎呦,真的要离开人家吗？</string>


    <!-- UserActionService -->
    <string name="save_success">保存成功</string>
    <string name="save_error">保存失败</string>
    <string name="title">标题</string>
    <string name="click_to_set_time">点击设置计划时间</string>
    <string name="click_to_save_plan">点击保存计划</string>
    <string name="modify">修改了</string>
    <string name="title_point">标题、</string>
    <string name="content_point">内容、</string>
    <string name="time_point">时间、</string>

    <string name="not_save_yeah">还没保存呢</string>
    <string name="content">内容</string>
    <string name="save">保存</string>
    <string name="year">年</string>

    <!--AddressActivity-->
    <string name="select_please">请选择</string>

    <!--WeatherActivity-->
    <string name="need_location_permission_to_offer_accurate_weather">需要定位权限去提供精确的服务</string>
    <string name="error_location">定位失败</string>
    <string name="refreshing_complete">刷新完成</string>

    <!--MainActivity-->
    <string name="navigation_drawer_open" translatable="false">close drawer</string>
    <string name="navigation_drawer_close" translatable="false">open drawer</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="no_permission_location">没有位置信息权限，无法更新天气！</string>
    <string name="weather_update_complete">天气更新完成</string>
    <string name="updating_weather">更新天气中</string>

    <string name="database_content_one">点击右上角，可以切换视图样式！</string>
    <string name="database_content_two">长按便签，可以进行批量操作！</string>
    <string name="database_content_three">在设置中，还可以清空缓存呢！</string>
    <string name="database_content_four">点击右下角，创建新的便签！</string>
    <string name="database_content_five">
        您现在使用的是该软件的第一个版本，使用中如果遇到问题，或者有什么建议,请一定要记得给我们发送反馈！\n本软件无毒无广告，功能也会在后续的开发中逐渐完善，如果您觉得好用，可以在支持一下开发者！\n开发这个软件纯粹是出于兴趣，也没有想加入广告，软件的进一步完善也需要你们的反馈和支持！\n非常感谢！
    </string>
    <string name="note_privacy_and_recycle">私密便签无法直接预览，请先恢复！</string>
    <string name="search">搜索</string>
    <string name="show_mode">显示模式</string>
    <string name="check_all">全选</string>


    <!--OtherServerFragment-->
    <string name="weather_forecast">天气预报</string>
    <string name="phone_attr">手机号码归属地</string>
    <string name="zip_code">邮编查询</string>
    <string name="recipe">菜谱查询</string>
    <string name="base_station_location">基站定位查询</string>
    <string name="id_card_inquiries">身份证查询</string>
    <string name="the_question_bank">驾考题库</string>
    <string name="train_ticket_inquiries">火车票查询</string>
    <string name="football_five_league">足球五大联赛</string>
    <string name="zg_solution_dream">周公解梦</string>

    <!--AboutActivity-->
    <string name="aboutContent">
        Todo应用如同它的名字一样，只做一个呆萌、极简的Todo软件。这么多Todo软件，你选择了我，这是我的幸运。\n
        从18年03月上线，到目前经历两次重大改版，一次代码的重构，一次界面的大幅度改动，目的都是为了更好的逻辑纹理。在开源的过程中，收到了很多来自有趣的你们的邮件。\n
        我也曾遇到过棘手的问题无处咨询又谷歌不到。那个时候的我，也可能是现在的你。所以我希望能够帮助到你。</string>
    <string name="open_source">
        • RxJava: github.com/ReactiveX/RxJava\n
        • RxAndroid: github.com/ReactiveX/RxAndroid\n
        • Retrofit: github.com/square/retrofit\n
        • Glide: github.com/bumptech/glide\n
        • YujunZhu/jennycham4(喵本喵) 设计师提供图标设计\n
        • 和风天气和Mob天气提供数据支持\n
        • 高德定位提供位置定位服务</string>
    <string name="bugs_tips">请到设置界面的应用反馈提交bug</string>
    <string name="nice_to_meet_you">很高兴认识你</string>
    <string name="everything_is_worth_it">一切都很值得</string>
    <string name="browse_open_source">查看项目源码</string>
    <string name="browse_person_blog">查看个人博客</string>
    <string name="support_me_with_your_donation">随意捐赠支持</string>
    <string name="share_todolist">分享Todolist</string>
    <string name="check_update">检查软件更新</string>
    <string name="link_me">联系作者方式</string>
    <string name="commit_bugs">意见错误反馈</string>
    <string name="thx_for_open_source_and_resource">感谢开源的世界和开放的资源</string>
    <string name="app_html">https://github.com/simplebam/Todolist</string>
    <string name="blog_html">http://blog.csdn.net/simplebam</string>
    <string name="share_txt">欢迎使用“Todolist”，希望每天都是好心情，您可以在https://fir.im/tolist下载</string>
    <string name="share_app">分享-Todolist</string>
    <string name="permission_statement">拒绝电话权限将无法捐献以感谢作者的辛苦劳动）</string>
    <string name="transfer_to_author">准备转账给作者啦</string>
    <string name="alipay_not_found">您没有安装支付宝，请安装支付宝再赞助哈</string>
    <string name="feedback_description">如果你有好的idea或建议，不要犹豫，告诉我吧~</string>
    <string name="no_note">没有便签 (´･_･`)</string>


    <!--EditNoteActivity-->
    <string name="need_storge_permission_to_open_album">需要读写内存权限才可以打开系统相册~</string>
    <string name="share">分享</string>
    <string name="statistics">统计</string>
    <!--&#8230;代表...-->
    <string name="creating_image">生成图片中&#8230;</string>
    <string name="error_on_create_image">生成图片发生错误</string>
    <string name="success_on_create_image">成功生成图片</string>
    <string name="from_todolist">来自：Todolist</string>
    <string name="share_by_picture">以图片形式分享</string>
    <string name="share_by_text">以文字形式分享</string>

    <!--ShareActivity-->
    <string name="preview">预览</string>
    <string name="need_storage_permission_to_save_photo">保存图片需要内存写入权限哦</string>
    <string name="apply_for_storage_permission_in_setting_if_select_the_longer_reminder">勾选了不再提醒需要前往设置界面获取权限</string>
    <string name="unable_to_save_photo_because_of_the_stroage_error">手机内存卡有问题,无法保存图片到图库,请检查</string>
    <string name="the_photo_not_exist">图片不存在</string>
    <string name="to_setting">前往设置界面</string>
    <string name="unable_to_send_picture_and_try_later">无法传送图片,请稍后再试</string>
    <string name="unable_to_share_picture_and_try_later">无法分享图片,请稍后再试</string>
    <string name="download">下载</string>
    <string name="delete">删除</string>
    <string name="photo">图片</string>
    <string name="delete_photo">删除图片</string>
    <string name="are_you_sure_to_delete_the_photo">确定删除该图片吗？</string>
    <string name="cancel">取消</string>
    <string name="recovery">恢复</string>
    <string name="unable_to_open_note_recover_to_previous_folder">无法直接打开便签，是否恢复至原有便签夹？</string>
    <string name="set_privacy">设为私密</string>
    <string name="move">移动</string>
    <string name="select_your_operation">请选择你的操作：</string>
    <string name="move_to">移动到</string>
    <string name="set_gestures_password">设置手势密码</string>
    <string name="reset">重新设置</string>
    <string name="reset_gestures_password">再次输入手势密码</string>
    <string name="incorrect_password">密码不正确</string>
    <string name="correct_password">密码正确</string>
    <string name="set_gestures_password_success">设置手势密码成功</string>
    <string name="app_lock">应用锁</string>


    <!--PersonalActvity-->
    <string name="willUrl">http://blog.csdn.net/simplebam</string>
    <string name="githubUrl">https://github.com/simplebam</string>
    <string name="email">3421448373@qq.com</string>
    <string name="contacts">Contacts</string>
    <string name="simpelbam">Simplebam</string>
    <string name="blog">Blog</string>
    <string name="github">Github</string>
    <string name="email_name">E-mail</string>
    <string name="clear_complete">清除完成</string>
    <string name="thanks_for_feedback">感谢你的反馈</string>
    <string name="set_current_cache">当前缓存为</string>

</resources>
