<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/note">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_todo"
                    android:icon="@drawable/ic_menu_todo"
                    android:title="@string/todo"/>
                <item
                    android:id="@+id/menu_privacy"
                    android:icon="@drawable/ic_menu_privacy"
                    android:title="@string/privacy"/>
                <item
                    android:id="@+id/menu_recycle_bin"
                    android:icon="@drawable/ic_menu_recycle_bin"
                    android:title="@string/recycle_bin"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_weather"
                    android:icon="@drawable/ic_menu_multi_cities"
                    android:title="@string/weather"/>
                <item
                    android:id="@+id/menu_setting"
                    android:icon="@drawable/ic_menu_setting"
                    android:title="@string/setting"/>
                <item
                    android:id="@+id/menu_about"
                    android:icon="@drawable/ic_menu_about"
                    android:title="@string/about"/>
            </group>
        </menu>
    </item>

</menu>
