<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tvContacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_personal_bg"/>

    <ImageView
        android:id="@+id/iv_author"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvContacts"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/hughjackman"/>

    <TextView
        android:id="@+id/tvContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="83dp"
        android:layout_marginStart="15dp"
        android:text="@string/contacts"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_blog"
        app:layout_constraintEnd_toStartOf="@+id/iv_author"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:textAllCaps="false"
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/simpelbam"
        android:textColor="@color/color_3c3c3c"
        app:layout_constraintEnd_toEndOf="@+id/iv_author"
        app:layout_constraintStart_toStartOf="@+id/iv_author"
        app:layout_constraintTop_toBottomOf="@+id/iv_author"/>

    <TextView
        android:textAllCaps="false"
        android:id="@+id/tv_blog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="121dp"
        android:text="@string/blog"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvContacts"/>

    <TextView
        android:textAllCaps="false"
        android:id="@+id/tv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/github"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/tv_blog"
        app:layout_constraintTop_toBottomOf="@+id/tv_blog"
        />

    <TextView
        android:textAllCaps="false"
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email_name"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="@+id/tvContacts"
        app:layout_constraintTop_toBottomOf="@+id/tv_github"/>

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/willUrl"
        android:textColor="@color/color_3c3c3c"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_blog"
        app:layout_constraintStart_toEndOf="@+id/tvContacts"/>

    <TextView
        android:id="@+id/tv_github_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/githubUrl"
        android:textColor="@color/color_3c3c3c"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_github"
        app:layout_constraintStart_toEndOf="@+id/tvContacts"/>

    <TextView
        android:id="@+id/tv_email_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/color_3c3c3c"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEmail"
        app:layout_constraintStart_toEndOf="@+id/tvContacts"/>

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        />


</android.support.constraint.ConstraintLayout>