<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dialog_bg_plantask">


    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/leave_app"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/dialog_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/black_70"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/dialog_exit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dialog_subtitle"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/common_item_bg_selector"
        android:gravity="center"
        android:text="@string/sure"/>

    <Button
        android:id="@+id/dialog_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/dialog_subtitle"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/common_item_bg_selector"
        android:gravity="center"
        android:text="@string/save"/>
</RelativeLayout>