<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="?attr/colorPrimary"
    android:orientation="horizontal"
    app:popupTheme="@style/AppTheme.PopupOverlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_toolbar_back"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_back"/>



        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_toolbar_time"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/tv_toolbar_date"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="9dp"
            android:layout_toStartOf="@id/tv_toolbar_time"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="14sp"/>

    </RelativeLayout>

</android.support.v7.widget.Toolbar>
